created an OwnerRepository.cs, IOwnerRepository.cs and OwnersController.cs

--- a/Views/Walkers/Index.cshtml
+++ b/Views/Walkers/Index.cshtml
@@ -44,8 +44,8 @@
 
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id=item.Id }),
-                @Html.ActionLink("details", "details", new {  id=item.Id  }),
+                @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
+                @Html.ActionLink("details", "details", new {  id=item.Id  }) |
                 @Html.ActionLink("delete", "delete", new {  id=item.Id  })
             </td>
         </tr>
