--- a/Views/Walkers/Index.cshtml
+++ b/Views/Walkers/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<DogGo.Models.Walker>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Walkers";
 }
 
-<h1>Index</h1>
+<h1>List of Walkers</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -19,7 +19,8 @@
                 @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.NeighborhoodId)
+                @*@Html.DisplayNameFor(model => model.NeighborhoodId)*@
+                Neighborhood Name
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.ImageUrl)
@@ -37,7 +38,7 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.NeighborhoodId)
+                @Html.DisplayFor(modelItem => item.Neighborhood.Name)
             </td>
             <td>
                 <img src="@item.ImageUrl" alt="avatar" />
